style: change main background from bg-gray-50 to bg-white

--- a/app/views/admin/solid_cable/show.html.erb
+++ b/app/views/admin/solid_cable/show.html.erb
@@ -1,7 +1,7 @@
 <%# TASK: Solid Cable Monitoring Dashboard %>
 <%# Custom dashboard for WebSocket message monitoring %>
 
-<div class="bg-gray-50 min-h-screen py-6">
+<div class="bg-white min-h-screen py-6">
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     <%# Header %>
     <div class="sm:flex sm:items-center sm:justify-between mb-8">
