--- a/app/views/admin/solid_queue/show.html.erb
+++ b/app/views/admin/solid_queue/show.html.erb
@@ -1,7 +1,7 @@
 <%# Custom Solid Queue Monitoring Dashboard %>
 <%# Provides visibility into background job processing with management actions %>
 
-<div class="bg-gray-50 min-h-screen py-6">
+<div class="bg-white min-h-screen py-6">
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     <%# Flash Messages %>
     <% if flash[:notice] %>
