--- a/app/views/dashboard/_sale_dashboard.html.erb
+++ b/app/views/dashboard/_sale_dashboard.html.erb
@@ -1,4 +1,4 @@
-<div class="min-h-screen bg-gray-50 flex flex-col">
+<div class="min-h-screen bg-white flex flex-col">
   <!-- Header -->
   <div class="sm:flex sm:items-center sm:justify-between mb-8">
       <div>
