--- a/app/views/dashboard/call_center.html.erb
+++ b/app/views/dashboard/call_center.html.erb
@@ -1,4 +1,4 @@
-<div class="min-h-screen bg-gray-50 flex flex-col">
+<div class="min-h-screen bg-white flex flex-col">
   <main class="flex-1 p-0 w-full space-y-8">
     
     <div class="flex items-center justify-between px-1">
