--- a/app/views/sales_workspace/kanban.html.erb
+++ b/app/views/sales_workspace/kanban.html.erb
@@ -1,4 +1,4 @@
-<div class="min-h-screen bg-gray-50 flex flex-col" data-controller="kanban">
+<div class="min-h-screen bg-white flex flex-col" data-controller="kanban">
   <%# Header %>
   <div class="sm:flex sm:items-center sm:justify-between mb-6">
     <div>
