--- a/app/views/holidays/_form.html.erb
+++ b/app/views/holidays/_form.html.erb
@@ -1,5 +1,5 @@
 <%# Holiday Form Partial - UI/UX ProMax %>
-<%= form_with(model: holiday, local: true, class: "space-y-6 max-w-2xl mx-auto") do |f| %>
+<%= form_with(model: holiday, local: true, class: "space-y-6") do |f| %>
   <% if holiday.errors.any? %>
     <div class="p-4 bg-red-50 border-l-4 border-red-500 rounded-r-lg">
       <div class="flex items-center text-red-800">
