--- a/app/views/service_types/_form.html.erb
+++ b/app/views/service_types/_form.html.erb
@@ -50,6 +50,7 @@
                 rows: 3,
                 class: "block w-full border border-gray-300 rounded-lg py-2.5 pl-10 pr-3 focus:outline-none focus:ring-2 focus:ring-brand-blue focus:border-brand-blue transition-colors resize-none",
                 placeholder: "Mô tả chi tiết về loại nhu cầu này..." %>
+          </div>
         </div>
 
         <%# Vị trí sắp xếp %>
